--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,12 @@
 {% extends "_base.html" %}
 {% block title %}Home{% endblock title %}
 {% block content %}
-<h1>This is our home page.</h1>
+<h1>Домашня сторінка.</h1>
+{% if user.is_authenticated %}
+<p>Привіт {{ user.email }}!</p>
+<p><a href="{% url 'logout' %}">Вихід</a></p>
+{% else %}
+<p>Ти не залогінився</p>
+<a href="{% url 'login' %}">Увійти</a>
+{% endif %}
 {% endblock content %}
