--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,11 +23,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item mx-2"><a href="#" class="nav-link px-2 text-white ">7 клас </a></li>
-                    <li class="nav-item mx-2"><a href="#" class="nav-link px-2 text-white">8 клас </a></li>
-                    <li class="nav-item mx-2"><a href="#" class="nav-link px-2 text-white">9 клас </a></li>
-                    <li class="nav-item mx-2"><a href="#" class="nav-link px-2 text-white">10 клас </a></li>
-                    <li class="nav-item mx-2"><a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="{% url 'object_list' %}">7 клас</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="">8 клас</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="">9 клас</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="">10 клас</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a href="{% url 'about' %}" class="nav-link px-2 text-white">About</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item mx-2">
@@ -43,7 +52,6 @@
         </div>
     </nav>
     <div class="container">
-
         {% block content %}
         {% endblock content %}
     </div>
