--- a/templates/education_classes/object_detail.html
+++ b/templates/education_classes/object_detail.html
@@ -1,7 +1,21 @@
 {% extends "_base.html" %}
+{% load static %}
 {% block title %}{{ subject.name }}{% endblock title %}
 {% block content %}
-<div class="object-detail">
-    <h2><a href="{{ subject.get_absolute_url }}">{{ subject.name }}</a></h2>
+<div class="object-detail-">
+    <h2><a>{{ subject.name }}</a></h2>
 </div>
+<div class="lesson-container">
+    {% for lesson in subject.lessons.all %}
+    <div class="lesson-box">
+        {% if lesson.images %}
+        <img class="lesson-cover" src="{{ lesson.images.url }}" alt="{{ lesson.title }}">
+        {% else %}
+        <img class="lesson-cover" src="/media/covers/no_photo.png" alt="{{ lesson.title }}">
+        {% endif %}
+        <h2><a href="{{ lesson.get_absolute_url }}">{{ lesson.title }}</a></h2>
+    </div>
+    {% endfor %}
+</div>
+
 {% endblock content %}
