--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,10 +5,14 @@
 {% block title %}Вхід{% endblock title %}
 
 {% block content %}
-<h2>Вхід</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-success" type="submit">Увійти</button>
-</form>
+<div class="main-log">
+    <div class="log-box">
+        <h2>Вхід</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-success" type="submit">Увійти</button>
+        </form>
+    </div>
+</div>
 {% endblock content %}
