--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,49 +1,121 @@
 body {
-    min-height: 75rem;
-    padding-top: 4.5rem;
+    margin: 0;
+    padding: 0;
+    font: small-caps bold 18px/1 sans-serif;
+}
+
+/* Стиль для шапки сайт */
+#header {
+    background: black;
+    width: 100%;
+    height: auto;
+    border: 5px solid black;
+    display: flex;
+    gap: 4px;
+    flex-wrap: wrap;
+    padding: 0.5em;
+}
+
+.main_nav {
+    margin-left: 5px;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-grow: 1;
+    /* Занимаем доступное пространство по ширине */
+}
+
+.nav_box,
+.log_box {
+    display: flex;
+    gap: 10px;
+    /* Добавлен отступ между элементами */
+}
+
+/* Добавляем медиа-запрос для адаптивности */
+@media (max-width: 768px) {
+    #header {
+        background: black;
+        width: 100%;
+        height: auto;
+        border: 5px solid black;
+        display: flex;
+        gap: 4px;
+        flex-wrap: wrap;
+    }
+
+    .main_nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav_box,
+    .log_box {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.nav_box li,
+.log_box li {
+    list-style: none;
+    margin-left: 5px;
+}
+
+.main_nav a,
+.nav_box a,
+.log_box a {
+    color: white;
+    text-decoration: none;
+}
+
+.main_nav a:hover,
+.nav_box a:hover,
+.log_box a:hover {
+    border-radius: 5px;
+    background: black;
+    color: gold;
+    box-shadow: 2px 3px 5px gold;
 }
 
 h1 {
-    color: red;
-}
-
-/* Общий стиль для всех ссылок */
-a {
-    color: #021930;
-    /* Цвет ссылок */
-    text-decoration: none;
-    /* Убрать подчеркивание */
-}
-
-/* Стиль для ссылок при наведении */
-a:hover {
-    text-decoration: underline;
-    /* Добавить подчеркивание при наведении */
-    color: rgb(245, 255, 62);
+    color: black;
 }
 
 .lesson-container {
+    font-family: 'Segoe UI', Tahoma;
     display: flex;
+    gap: 4px;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 -10px;
+    margin-top: 10px;
 }
 
 .lesson-box {
-    width: calc(25% - 20px);
-    margin-bottom: 20px;
-    box-sizing: border-box;
+    width: 200px;
+    justify-content: center;
     text-align: center;
-    overflow: hidden;
+    flex-grow: 1;
+    display: inline;
+    flex: 1 0 calc(25% - 20px);
+}
+
+.lesson-box a {
+    text-decoration: none;
+    color: black;
+}
+
+.lesson-box a:hover {
+    text-decoration: underline;
 }
 
 .lesson-box img,
 .lesson-cover {
-    width: auto;
+    width: 150px;
     height: 150px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
 }
 
@@ -51,108 +123,173 @@ h2 {
     margin-top: 10px;
 }
 
-/* Общий стиль для контейнера урока */
+
+/* Style for lesson-detail page */
 .lesson-detail {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    height: auto;
+    width: 70%;
+    margin: auto;
+    background-color: rgba(239, 211, 100, 0.744);
 }
 
-/* Стиль для заголовка урока */
-.lesson-detail h2 {
-    color: #333;
-    font-size: 28px;
-    margin-bottom: 15px;
+.title {
+    text-align: center;
+    color: black;
+    margin-bottom: 30px;
+    border-bottom: solid 2px black;
 }
 
-/* Стиль для текста урока */
-.lesson-detail p {
-    color: #555;
-    font-size: 16px;
-    line-height: 1.6;
+.description {
+    text-align: start;
+    margin-bottom: 30px;
+    padding-left: 10px;
 }
 
-/* Стиль для изображений */
-.image-box {
-    margin-top: 20px;
-}
-
-/* Стиль для файлов Docx и PDF */
-.docx-box,
-.pdf-box,
-.google-form-box {
-    margin-top: 20px;
-}
-
-.docx-box img,
-.pdf-box img,
-.google-form-box img {
-    max-width: 100%;
-    height: 150px;
-    /* Фиксированная высота */
-    object-fit: cover;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    /* object-fit: cover; (оставить это свойство для сохранения соотношения сторон) */
-}
-
-/* Стиль для видео из YouTube */
-.youtube-box {
-    margin-top: 20px;
-}
-
-.youtube-box iframe {
-    width: 100%;
-    height: 315px;
-}
-
-/* Стиль для ссылки "Назад до списку уроків" */
-.lesson-detail a {
-    display: block;
-    margin-top: 20px;
-    color: #007BFF;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.lesson-detail a:hover {
-    text-decoration: underline;
-}
-
-/* Обновленные стили */
 .files-box {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border: 1px solid #23b788;
-    /* Цвет и стиль границы */
-    padding: 10px;
-    /* Добавляем отступ вокруг бокса */
+    justify-content: center;
+    background-color: white;
+    border: 3px black dashed;
+    border-radius: 30%;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .document-box {
+    margin: 3px;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 300px;
-    /* Фиксированная ширина общего бокса для файлов */
+    gap: 10px;
 }
 
-.document-box a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
+.youtube-box {
+    text-align: center;
+    margin-bottom: 30px;
 }
 
-.document-box img {
-    max-width: 100%;
+.presentation-box {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.learn-img {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.learn-img img {
+    width: 560px;
     height: auto;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-    align-self: flex-start;
-    /* Передвигаем изображения вверх (в начало) */
+    margin-bottom: 5px;
+}
+
+/* стиль для LOGOUT */
+.main-logout {
+    margin-top: 10%;
+    text-align: center;
+}
+
+.logout_box {
+    border: solid 5px black;
+    background-color: black;
+    border-radius: 5px;
+    display: inline-block;
+    color: white;
+}
+
+
+/* Style for home page */
+.greeting {
+    background-color: var(--background);
+    border-radius: 5px;
+    display: inline-block;
+    justify-content: center;
+    padding: 2em;
+    color: white;
+}
+
+
+/* Style for home page gallery */
+.img-box {
+    display: flex;
+    background-color: var(--background);
+    gap: 16px;
+    /* scale: 1.6; */
+    justify-content: center;
+    /* Центрируем содержимое по горизонтали */
+    align-items: center;
+    /* Центрируем содержимое по вертикали */
+}
+
+.card {
+    position: relative;
+    left: 0px;
+    width: 200px;
+    height: 240px;
+    background-color: var(--background);
+    border-radius: 8px;
+    transition: 1000ms all;
+    transform-origin: center left;
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.5);
+    outline: 1px solid var(--background);
+    overflow: hidden;
+
+}
+
+
+.card img {
+    height: 240px;
+    object-fit: fill;
+    border-radius: 4px;
+}
+
+
+.card:hover {
+    cursor: pointer;
+    transform: scale(1.15);
+}
+
+
+.card:hover figcaption {
+    font-size: 0.5rem;
+    position: absolute;
+    height: 180px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    background: linear-gradient(to top,
+            rgba (0, 0, 0, 0.9) 0%,
+            rgba (0, 0, 0, 0) 100%,
+        );
+    color: white;
+    left: 0px;
+    bottom: 0px;
+    padding-left: 12px;
+    padding-bottom: 10px;
+}
+
+.card:hover~.card {
+    font-weight: bold;
+    cursor: pointer;
+    transform: translateX(22px);
+}
+
+
+/* Style for login page */
+.main-log {
+    text-align: center;
+}
+
+
+.log-box {
+    border: var(--background);
+    background-color: rgba(30, 28, 20, 0.614);
+    border-radius: 5px;
+    display: inline-block;
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
 }
