--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -3,11 +3,15 @@
 {% load crispy_forms_tags %}
 {% block title %}Log Out{% endblock %}
 {% block content %}
-<h1>Log Out</h1>
-<p>Are you sure you want to log out?</p>
-<form method="post" action="{% url 'account_logout' %}">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button class="btn btn-danger" type="submit">Log Out</button>
-</form>
+<div class="main-logout">
+    <div class="logout_box">
+        <h3>Вихід</h3>
+        <p>Ви впевнені, що бажаєте вийти з облікового запису?</p>
+        <form method="post" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-danger" type="submit">Вихід</button>
+        </form>
+    </div>
+</div>
 {% endblock content %}
